refactor: use repository method for chat history in ChatService